--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.jpa.hibernate.ddl-auto = create
 spring.datasource.url=jdbc:h2:file:~/test
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+spring.h2.console.settings.web-allow-others=true
+
+eureka.client.service-url.defaultZone= http://discovery:8761/eureka
 eureka.client.register-with-eureka=true
